<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="50dp"
        android:text="@string/tv_title"
        android:textColor="@android:color/holo_green_dark"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ivCover"
        android:layout_width="227dp"
        android:layout_height="197dp"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle"
        app:srcCompat="@drawable/vivaldi" />

    <Button
        android:id="@+id/btnOcean"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginStart="145dp"
        android:layout_marginLeft="145dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="145dp"
        android:layout_marginRight="145dp"
        android:background="#C4D8AE"
        android:text="@string/btn_ocean"
        android:textColor="#204945"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivCover" />

    <Button
        android:id="@+id/btnForest"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginStart="145dp"
        android:layout_marginLeft="145dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="145dp"
        android:layout_marginRight="145dp"
        android:background="#C4D8AE"
        android:text="@string/btn_forest"
        android:textColor="#204945"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnOcean" />

    <Button
        android:id="@+id/btnUniverse"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginStart="145dp"
        android:layout_marginLeft="145dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="145dp"
        android:layout_marginRight="145dp"
        android:background="#C4D8AE"
        android:text="@string/btn_universe"
        android:textColor="#204945"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnForest" />

    <Button
        android:id="@+id/btnFlower"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginStart="145dp"
        android:layout_marginLeft="145dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="145dp"
        android:layout_marginRight="145dp"
        android:background="#C4D8AE"
        android:text="@string/btn_flower"
        android:textColor="#204945"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnUniverse" />


</android.support.constraint.ConstraintLayout>